Added Lab for Gaussian processes

--- a/GaussianProcesses/AdvBayesLearn_GP1.lyx
+++ b/GaussianProcesses/AdvBayesLearn_GP1.lyx
@@ -2828,7 +2828,7 @@ For Gaussian process regression we can actually do this analytically
 
 \begin_inset Formula 
 \[
-\log p(\mathbf{y}|\mathbf{X},\theta)=-\frac{1}{2}\mathbf{y}^{T}\left(K+\sigma_{n}^{2}I\right)\mathbf{y}-\frac{1}{2}\log\left|K+\sigma_{n}^{2}I\right|-\frac{n}{2}\log(2\pi)
+\log p(\mathbf{y}|\mathbf{X},\theta)=-\frac{1}{2}\mathbf{y}^{T}\left(K+\sigma_{n}^{2}I\right)^{-1}\mathbf{y}-\frac{1}{2}\log\left|K+\sigma_{n}^{2}I\right|-\frac{n}{2}\log(2\pi)
 \]
 
 \end_inset
@@ -3209,7 +3209,7 @@ Prediction for a test case
 :
 \begin_inset Formula 
 \[
-Pr(y_{*}=+1|\mathbf{X},\mathbf{y},\mathbf{x}_{*})=\int\sigma(f_{*})p(f_{*}|\mathbf{X},\mathbf{x}_{*},\mathbf{f})df_{*}
+Pr(y_{*}=+1|\mathbf{X},\mathbf{y},\mathbf{x}_{*})=\int\sigma(f_{*})p(f_{*}|\mathbf{x}_{*},\mathbf{X,y})df_{*}
 \]
 
 \end_inset
@@ -3241,7 +3241,7 @@ The predictive distribution of
  is
 \begin_inset Formula 
 \[
-p(f_{*}|\mathbf{X},\mathbf{x}_{*},\mathbf{f})=\int p(f_{*}|\mathbf{X},\mathbf{x}_{*},\mathbf{f})p(\mathbf{f}|\mathbf{X},\mathbf{y})d\mathbf{f}
+p(f_{*}|\mathbf{x}_{*},\mathbf{X},\mathbf{y})=\int p(f_{*}|\mathbf{X},\mathbf{x}_{*},\mathbf{f})p(\mathbf{f}|\mathbf{X},\mathbf{y})d\mathbf{f}
 \]
 
 \end_inset
@@ -3401,7 +3401,11 @@ of
 \begin_inset Formula $f_{*}$
 \end_inset
 
-are possible.
+are 
+\series bold
+possible
+\series default
+.
  Predictions of 
 \begin_inset Formula $y_{*}$
 \end_inset
